@@ -1,3 +1,11 @@
+2010-10-25  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Fixed a bug that made the server crash when
+	  trying to match an alert with an invalid regular expression. Merged
+	  from trunk.
+	
+	* lib/PandoraFMS/Tools.pm: Fixed a typo.
+
 2010-10-22  Sancho Lerena <slerena@artica.es>
 
 	* lib/PandoraFMS/NetworkServer.pm: Enforce HTML decoding on tcp send
